# duplicate_file_filter

./: .gitignore  PHOTO_ORGANIZER_RULES.md  README.md  duplicate_finder.py  file_util.py  image_processor.py  jwfilefiltergui.py  requirements.txt  run.bat  run_gui.bat  test_srp.py  verify_gui.py
photo_organizer/: README.md  config.yaml  pyproject.toml
photo_organizer/cli/: __init__.py  main.py
photo_organizer/core/: __init__.py  config.py  duplicate_detector.py  duplicate_handler.py  exif_utils.py  existing_structure.py  gps_utils.py  grouper.py  models.py  renamer.py
photo_organizer/gui/: __init__.py  main_gui.py
