[project]
name = "photo-organizer"
version = "0.1.0"
description = "NAS-based personal photo auto-organizer with EXIF grouping and duplicate detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0",
    "exifread>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5.0", "tkinterdnd2>=0.4.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0"]

[tool.black]
line-length = 88
target-version = ['py311']